--- a/java/connector-node/risingwave-connector-service/src/main/resources/sql_server.properties
+++ b/java/connector-node/risingwave-connector-service/src/main/resources/sql_server.properties
@@ -6,8 +6,7 @@ database.hostname=${hostname}
 database.port=${port}
 database.user=${username}
 database.password=${password}
-database.dbname=${database.name}
-database.server.name=${server.name}
+database.names=${database.name}
 table.include.list=${schema.name}.${table.name}
 # default to disable schema change events
 include.schema.changes=${debezium.include.schema.changes:-false}
