--- a/java/connector-node/risingwave-source-cdc/pom.xml
+++ b/java/connector-node/risingwave-source-cdc/pom.xml
@@ -47,6 +47,10 @@
             <groupId>io.debezium</groupId>
             <artifactId>debezium-connector-mongodb</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.debezium</groupId>
+            <artifactId>debezium-connector-sqlserver</artifactId>
+        </dependency>
 
         <!-- database dependencies  -->
         <dependency>
